[package]
name = "tokio-websocket-server"
version = "0.1.0"
authors = ["Patrick Sullivan <patricksullivan08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures-channel = "0.3"
futures-util = "0.3.4"
tokio-tungstenite = "0.10.1"
tungstenite = "0.10.1"