[package]
name = "abm-server"
version = "0.1.0"
authors = ["Patrick Sullivan <patricksullivan08@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-channel = "0.3"
futures-util = "0.3.4"
nalgebra = "0.21.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
spade = "1.8.2"
specs = "0.16.1"
specs-derive = "0.4.1"
tokio-tungstenite = "0.10.1"
tokio = { version = "0.2", features = ["full"] }
tungstenite = "0.10.1"